# pdb_custom_process

./: .gitignore  Dockerfile  README.md  celery_app.py  celeryconfig.py  cli.py  docker-compose.yml  exceptions.py  main.py  mapping.json  pyproject.toml  tasks.py  utils.py
exporters/: chain_file_exporter.py  file_exporter.py  prediction_file_exporter.py
file_providers/: base_file_provider.py  chain_provider.py  local_file_provider.py
model_processors/: t5_model_executor.py
pdb_processors/: pdb_biopython_processor.py  pdb_custom_processor.py
