[project]
name = "azinterview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.85",
    "celery>=5.4.0",
    "click>=8.1.8",
    "environs>=14.1.1",
    "ipython>=8.32.0",
    "isort>=6.0.0",
    "redis>=5.2.1",
    "ruff>=0.9.7",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
